chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-clean-template",
+  "name": "ec-202202-ta-p2-back",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
