--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^4.12.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vitest/coverage-c8": "^0.28.5",
@@ -27,8 +31,14 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "prisma": "^4.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4",
     "vitest": "^0.28.5"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
