--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals","vite/client"],
     "esModuleInterop": true,
     "module": "CommonJS",
     "rootDirs": ["./src"],
