--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-security": "^1.7.1",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
