--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -39,8 +41,10 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   }
